codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_cached_limits_hide_credits_without_flag.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────────────╮
│  >_ Lavilas Codex (v0.0.0)                                           │
│                                                                     │
│ Откройте https://chatgpt.com/codex/settings/usage для актуальной       │
│ информации о лимитах и кредитах                              │
│                                                                     │
│  Модель:            gpt-5.1-codex (размышления выкл, сводки авто)   │
│  Каталог: [[workspace]]                                           │
│  Доступ:      Пользовательский (Только чтение, по запросу)                   │
│  AGENTS.md:        <нет>                                           │
│                                                                     │
│  Токены:      1.05K всего  (700 вход + 350 выход)            │
│  Контекстное окно:   100% осталось (1.45K использовано / 272K)                    │
│  5ч лимит:         [████████░░░░░░░░░░░░] 40% осталось (сброс 11:32)   │
│  Недельный лимит:     [█████████████░░░░░░░] 65% осталось (сброс 11:52)   │
│  Предупреждение:          лимиты могут быть устаревшими, начните новый запрос для обновления. │
╰─────────────────────────────────────────────────────────────────────╯
