codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_includes_credits_and_limits.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────╮
│  >_ Lavilas Codex (v0.0.0)                                         │
│                                                                   │
│ Откройте https://chatgpt.com/codex/settings/usage для актуальной     │
│ информации о лимитах и кредитах                            │
│                                                                   │
│  Модель:            gpt-5.1-codex (размышления выкл, сводки авто) │
│  Каталог: [[workspace]]                                         │
│  Доступ:      Пользовательский (Только чтение, по запросу)                 │
│  AGENTS.md:        <нет>                                         │
│                                                                   │
│  Токены:      2K всего  (1.4K вход + 600 выход)            │
│  Контекстное окно:   100% осталось (2.2K использовано / 272K)                   │
│  5ч лимит:         [███████████░░░░░░░░░] 55% осталось (сброс 09:25) │
│  Недельный лимит:     [██████████████░░░░░░] 70% осталось (сброс 09:55) │
│  Кредиты:          38 кредитов                                     │
╰───────────────────────────────────────────────────────────────────╯
