codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_includes_forked_from.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────────╮
│  >_ Lavilas Codex (v0.0.0)                                             │
│                                                                       │
│ Откройте https://chatgpt.com/codex/settings/usage для актуальной         │
│ информации о лимитах и кредитах                                │
│                                                                       │
│  Модель:            gpt-5.1-codex-max (размышления выкл, сводки авто) │
│  Каталог: [[workspace]]                                             │
│  Доступ:      Пользовательский (Только чтение, по запросу)                     │
│  AGENTS.md:        <нет>                                             │
│  Сессия:          0f0f3c13-6cf9-4aa4-8b80-7d49c2f1be2e               │
│  Форк от:      e9f18a88-8081-4e51-9d4e-8af5cde2d8dd               │
│                                                                       │
│  Токены:      1.2K всего  (800 вход + 400 выход)               │
│  Контекстное окно:   100% осталось (1.2K использовано / 272K)                       │
│  Лимиты:           данные пока недоступны                             │
╰───────────────────────────────────────────────────────────────────────╯
