codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_includes_monthly_limit.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────────────────╮
│  >_ Lavilas Codex (v0.0.0)                                                  │
│                                                                            │
│ Откройте https://chatgpt.com/codex/settings/usage для актуальной              │
│ информации о лимитах и кредитах                                     │
│                                                                            │
│  Модель:            gpt-5.1-codex-max (размышления выкл, сводки авто)      │
│  Каталог: [[workspace]]                                                  │
│  Доступ:      Пользовательский (Только чтение, по запросу)                          │
│  AGENTS.md:        <нет>                                                  │
│                                                                            │
│  Токены:      1.2K всего  (800 вход + 400 выход)                    │
│  Контекстное окно:   100% осталось (1.2K использовано / 272K)                            │
│  Месячный лимит:    [██████████████████░░] 88% осталось (сброс 07:08 on 7 May) │
╰────────────────────────────────────────────────────────────────────────────╯
