codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_missing_limits_message.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────────╮
│  >_ Lavilas Codex (v0.0.0)                                             │
│                                                                       │
│ Откройте https://chatgpt.com/codex/settings/usage для актуальной         │
│ информации о лимитах и кредитах                                │
│                                                                       │
│  Модель:            gpt-5.1-codex-max (размышления выкл, сводки авто) │
│  Каталог: [[workspace]]                                             │
│  Доступ:      Пользовательский (Только чтение, по запросу)                     │
│  AGENTS.md:        <нет>                                             │
│                                                                       │
│  Токены:      750 всего  (500 вход + 250 выход)                │
│  Контекстное окно:   100% осталось (750 использовано / 272K)                        │
│  Лимиты:           данные пока недоступны                             │
╰───────────────────────────────────────────────────────────────────────╯
