codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_refreshing_limits_notice.snap
---
source: tui/src/status/tests.rs
assertion_line: 765
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────────╮
│  >_ Lavilas Codex (v0.0.0)                                             │
│                                                                       │
│ Откройте https://chatgpt.com/codex/settings/usage для актуальной         │
│ информации о лимитах и кредитах                                │
│                                                                       │
│  Модель:            gpt-5.1-codex-max (размышления выкл, сводки авто) │
│  Каталог: [[workspace]]                                             │
│  Доступ:      Пользовательский (Только чтение, по запросу)                     │
│  AGENTS.md:        <нет>                                             │
│                                                                       │
│  Токены:      750 всего  (500 вход + 250 выход)                │
│  Контекстное окно:   100% осталось (750 использовано / 272K)                        │
│  5ч лимит:         [███████████░░░░░░░░░] 55% осталось (сброс 08:24)     │
│  Недельный лимит:     [██████████████░░░░░░] 70% осталось (сброс 08:54)     │
│  Примечание:           обновляю лимиты в фоне...                 │
╰───────────────────────────────────────────────────────────────────────╯
