codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_truncates_in_narrow_terminal.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────────╮
│  >_ Lavilas Codex (v0.0.0)                                          │
│                                                                    │
│ Откройте https://chatgpt.com/codex/settings/usage для актуальной      │
│ информации о лимитах и кредитах                             │
│                                                                    │
│  Модель:            gpt-5.1-codex-max (размышления high, summaries de │
│  Каталог: [[workspace]]                                          │
│  Доступ:      Пользовательский (Только чтение, по запросу)                  │
│  AGENTS.md:        <нет>                                          │
│                                                                    │
│  Токены:      1.9K всего  (1K вход + 900 выход)             │
│  Контекстное окно:   100% осталось (2.25K использовано / 272K)                   │
│  5ч лимит:         [██████░░░░░░░░░░░░░░] 28% осталось (сброс 03:14)  │
╰────────────────────────────────────────────────────────────────────╯
